objects/Sales_Invoice__c/Sales_Invoice__c.object-meta.xml
<CustomObject>
    <label>Billing Package</label>
    <nameField>
        <label>No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>