objects/Sales_Invoice__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Executive</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Salesperson__c.Account_Executive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Sales Invoices (Account Executive)</relationshipLabel>
    <relationshipName>Sales_Invoices_AE</relationshipName>
    <type>Lookup</type>
</CustomField>