objects/Sales_Invoice__c/fields/ACV_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ACV_Campaign__c</fullName>
    <label>ACV Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>