objects/Sales_Invoice__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <formula>Account_Executive__r.User__c  = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE</label>
    <type>Checkbox</type>
</CustomField>