objects/Sales_Invoice__c/fields/AE_Role__c.field-meta.xml
<CustomField>
    <fullName>AE_Role__c</fullName>
    <formula>Account_Executive__r.User_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Role</label>
    <type>Text</type>
</CustomField>