objects/Sales_Invoice__c/fields/AEReportRunner__c.field-meta.xml
<CustomField>
    <fullName>AEReportRunner__c</fullName>
    <formula>$User.Id =  Account_Executive__r.User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEReportRunner</label>
    <type>Checkbox</type>
</CustomField>