objects/Sales_Invoice__c/fields/Approved_Level__c.field-meta.xml
<CustomField>
    <fullName>Approved_Level__c</fullName>
    <label>Approved Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>