objects/Sales_Invoice__c/fields/Approved_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Approved_Profit_Margin__c</fullName>
    <label>Original Profit Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>