objects/Sales_Invoice__c/fields/Bill_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bill-to Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Invoices (Bill-to Customer)</relationshipLabel>
    <relationshipName>Sales_Invoices1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>