objects/Sales_Invoice__c/fields/BP_Sent_to_EQAI__c.field-meta.xml
<CustomField>
    <fullName>BP_Sent_to_EQAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BP Sent to EQAI</label>
    <type>Checkbox</type>
</CustomField>