objects/Sales_Invoice__c/fields/CL_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>CL_Posting_Date__c</fullName>
    <formula>Customer_Ledger_Entry__r.Posting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CL Posting Date</label>
    <type>Date</type>
</CustomField>