objects/Sales_Invoice__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>