objects/Sales_Invoice__c/fields/Contract_Surcharge_Prct__c.field-meta.xml
<CustomField>
    <fullName>Contract_Surcharge_Prct__c</fullName>
    <formula>Contract__r.Surcharge_Pct__c</formula>
    <label>Contract Surcharge %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>