objects/Sales_Invoice__c/fields/Contract_Surcharge_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Surcharge_Type__c</fullName>
    <formula>text(Contract__r.Surcharge_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Surcharge Type</label>
    <type>Text</type>
</CustomField>