objects/Sales_Invoice__c/fields/Corrected_Customer_PO_No__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Customer_PO_No__c</fullName>
    <label>Corrected Customer PO No.</label>
    <length>35</length>
    <type>Text</type>
</CustomField>