objects/Sales_Invoice__c/fields/CR_SI_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>CR_SI_Invoice_Amount__c</fullName>
    <formula>Invoice_Amt_Incl_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CR SI Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>