objects/Sales_Invoice__c/fields/Created_to_Days_to_Post__c.field-meta.xml
<CustomField>
    <fullName>Created_to_Days_to_Post__c</fullName>
    <formula>SysPostedDate__c -    DATEVALUE(CreatedDate )</formula>
    <inlineHelpText>Count days to post using sys posting date minus invoice created date</inlineHelpText>
    <label>Days to Send to EQAI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>