objects/Sales_Invoice__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Memo</label>
    <type>Checkbox</type>
</CustomField>