objects/Sales_Invoice__c/fields/Credit_Memo_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Reason_Code__c</fullName>
    <label>Credit Memo Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit and Rebill</fullName>
            </value>
            <value>
                <fullName>Customer is tax exempt</fullName>
            </value>
            <value>
                <fullName>Duplicate billing</fullName>
            </value>
            <value>
                <fullName>Good will</fullName>
            </value>
            <value>
                <fullName>Pricing error</fullName>
            </value>
            <value>
                <fullName>Service credit</fullName>
            </value>
            <value>
                <fullName>Wrong billing address</fullName>
            </value>
            <value>
                <fullName>Wrong posting date on invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>