objects/Sales_Invoice__c/fields/Credit_Memo_Worksheet__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Worksheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo Worksheet</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Sales Invoices (Credit Memo Worksheet)</relationshipLabel>
    <relationshipName>Sales_Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>