objects/Sales_Invoice__c/fields/Customer_Ledger_Entry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ledger_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Ledger Entry</label>
    <referenceTo>Customer_Ledger_Entry__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>