objects/Sales_Invoice__c/fields/Date_of_Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Payment__c</fullName>
    <formula>Customer_Ledger_Entry__r.Date_of_Last_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fully Paid Date</label>
    <type>Date</type>
</CustomField>