objects/Sales_Invoice__c/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <formula>IF(AND(TODAY() &gt; Due_Date__c,Payment_Status__c != 'Fully Paid'), TODAY() - Due_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>