objects/Sales_Invoice__c/fields/Days_Sales_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Days_Sales_Outstanding__c</fullName>
    <formula>IF(ISBLANK( Date_of_Last_Payment__c), TODAY()- Posting_Date__c , Date_of_Last_Payment__c -  Posting_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Sales Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>