objects/Sales_Invoice__c/fields/Days_to_Approval__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Approval__c</fullName>
    <formula>Approval_Date__c -  DATEVALUE(CreatedDate)</formula>
    <label>Days to Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>