objects/Sales_Invoice__c/fields/Days_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Invoice__c</fullName>
    <formula>DATEVALUE(CreatedDate) -  Last_Service_Dates__c</formula>
    <label>Days to Send Billing Package</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>