objects/Sales_Invoice__c/fields/Days_to_Post__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Post__c</fullName>
    <formula>SysPostedDate__c - DATEVALUE(CreatedDate )</formula>
    <inlineHelpText>Count days to post - SysPosted Date - Created Date</inlineHelpText>
    <label>Days to Post</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>