objects/Sales_Invoice__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Sent to EQAI</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>