objects/Sales_Invoice__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <formula>IF(Credit_Memo__c == TRUE, 
  IF(Misc_Invoice__c == TRUE, 'Misc. Credit Memo', 'Credit Memo'), 
  IF(Retainage_Invoice__c == TRUE,
    'Retainage Invoice',
    IF(Rental_Invoice__c == TRUE,
      'Rental Invoice',
      IF(Misc_Invoice__c == TRUE,
        'Misc. Invoice',
        'Billing Package'
      )
    )
  ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type</label>
    <type>Text</type>
</CustomField>