objects/Sales_Invoice__c/fields/DSO__c.field-meta.xml
<CustomField>
    <fullName>DSO__c</fullName>
    <formula>IF(Days_Sales_Outstanding__c  &lt;= 30,
30,




IF(Days_Sales_Outstanding__c  &gt;30 &amp;&amp; Days_Sales_Outstanding__c &lt;= 60,
60,



IF(Days_Sales_Outstanding__c  &gt;60 &amp;&amp; Days_Sales_Outstanding__c &lt;= 90,
90,

IF(Days_Sales_Outstanding__c  &gt;90 &amp;&amp; Days_Sales_Outstanding__c &lt;= 120,
120,


IF(Days_Sales_Outstanding__c  &gt;120 &amp;&amp; Days_Sales_Outstanding__c &lt;= 700,
365,
Days_Sales_Outstanding__c 
)))))</formula>
    <label>DSO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>