objects/Sales_Invoice__c/fields/EQAI_Billing_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Billing_Project_ID__c</fullName>
    <label>EQAI Billing Project ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>