objects/Sales_Invoice__c/fields/Estimated_SO_Profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_SO_Profit__c</fullName>
    <formula>Sales_Order__r.Total_Profit_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated SO Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>