objects/Sales_Invoice__c/fields/First_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Service_Date__c</fullName>
    <label>First Service Date</label>
    <summarizedField>Sales_Invoice_Line__c.Scheduled_Date__c</summarizedField>
    <summaryForeignKey>Sales_Invoice_Line__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>