objects/Sales_Invoice__c/fields/I_C__c.field-meta.xml
<CustomField>
    <fullName>I_C__c</fullName>
    <formula>TEXT( Bill_to_Customer__r.Customer_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I/C</label>
    <type>Text</type>
</CustomField>