objects/Sales_Invoice__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>