objects/Sales_Invoice__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <label>Billing Package Amount</label>
    <summarizedField>Sales_Invoice_Line__c.Line_Amount__c</summarizedField>
    <summaryForeignKey>Sales_Invoice_Line__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>