objects/Sales_Invoice__c/fields/Invoice_Cost__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Cost__c</fullName>
    <label>Billing Package Cost</label>
    <summarizedField>Sales_Invoice_Line__c.Line_Cost__c</summarizedField>
    <summaryForeignKey>Sales_Invoice_Line__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>