objects/Sales_Invoice__c/fields/Invoice_Created_Day__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Created_Day__c</fullName>
    <formula>CASE(
 MOD(    Invoice_Date__c - date(1990, 1, 7),7), 
  0, "Sunday",
  1, "Monday",
  2, "Tuesday",
  3, "Wednesday",
  4, "Thursday",
  5, "Friday", 
  "Saturday"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Created Day</label>
    <type>Text</type>
</CustomField>