objects/Sales_Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <label>Billing Package Date</label>
    <type>Date</type>
</CustomField>