objects/Sales_Invoice__c/fields/Invoice_Lines__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Lines__c</fullName>
    <label>Billing Package Lines</label>
    <summaryForeignKey>Sales_Invoice_Line__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>