objects/Sales_Invoice__c/fields/Invoice_Note__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Note__c</fullName>
    <label>Billing Package Note</label>
    <type>TextArea</type>
</CustomField>