objects/Sales_Invoice__c/fields/Invoice_Profit__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Profit__c</fullName>
    <formula>Invoice_Amount__c - Invoice_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Package Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>