objects/Sales_Invoice__c/fields/Invoice_Profit_prct__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Profit_prct__c</fullName>
    <formula>If (Invoice_Amount__c &lt;&gt; 0, Invoice_Profit__c / Invoice_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Package Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>