objects/Sales_Invoice__c/fields/Invoice_Tax__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Tax__c</fullName>
    <label>Billing Package Tax</label>
    <summarizedField>Sales_Invoice_Line__c.Tax__c</summarizedField>
    <summaryForeignKey>Sales_Invoice_Line__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>