objects/Sales_Invoice__c/fields/Invoice_Time__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Time__c</fullName>
    <formula>Invoice_Date__c   - Last_Service_Dates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>