objects/Sales_Invoice__c/fields/Invoice_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total_Cost__c</fullName>
    <formula>Invoice_Cost__c + Overhead_Burden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Package Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>