objects/Sales_Invoice__c/fields/Is_Fully_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Fully_Paid__c</fullName>
    <formula>Amount_Paid__c == ROUND(Invoice_Amt_Incl_Tax__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Fully Paid</label>
    <type>Checkbox</type>
</CustomField>