objects/Sales_Invoice__c/fields/Last_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Date__c</fullName>
    <label>Last Invoice Date</label>
    <type>Date</type>
</CustomField>