objects/Sales_Invoice__c/fields/Last_Service_Dates__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Dates__c</fullName>
    <label>Last Service Date</label>
    <summarizedField>Sales_Invoice_Line__c.Scheduled_Date__c</summarizedField>
    <summaryForeignKey>Sales_Invoice_Line__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>