objects/Sales_Invoice__c/fields/LastActivity__c.field-meta.xml
<CustomField>
    <fullName>LastActivity__c</fullName>
    <label>LastActivity</label>
    <type>Date</type>
</CustomField>