objects/Sales_Invoice__c/fields/Material_Price__c.field-meta.xml
<CustomField>
    <fullName>Material_Price__c</fullName>
    <label>Material Price</label>
    <summarizedField>Sales_Invoice_Line__c.Line_Amt_Incl_Tax__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Invoice_Line__c.Category__c</field>
        <operation>equals</operation>
        <value>Materials</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Invoice_Line__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>