objects/Sales_Invoice__c/fields/Misc_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Misc_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Misc. Invoice</label>
    <type>Checkbox</type>
</CustomField>