objects/Sales_Invoice__c/fields/New_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Posting_Date__c</fullName>
    <label>New Posting Date</label>
    <type>Date</type>
</CustomField>