objects/Sales_Invoice__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <formula>HYPERLINK("/"&amp;Id,Name,"_Self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.</label>
    <type>Text</type>
</CustomField>