objects/Sales_Invoice__c/fields/NT_Amount__c.field-meta.xml
<CustomField>
    <fullName>NT_Amount__c</fullName>
    <label>NT Amount</label>
    <summarizedField>Sales_Invoice_Line__c.Line_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Invoice_Line__c.Tax_Group__c</field>
        <operation>equals</operation>
        <value>NT</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Invoice_Line__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>