objects/Sales_Invoice__c/fields/Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks__c</fullName>
    <label>Number of Task</label>
    <summaryForeignKey>Sales_Invoice_Job_Task__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>