objects/Sales_Invoice__c/fields/of_Material__c.field-meta.xml
<CustomField>
    <fullName>of_Material__c</fullName>
    <label>Material Count</label>
    <summaryFilterItems>
        <field>Sales_Invoice_Line__c.Category__c</field>
        <operation>equals</operation>
        <value>Materials</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Invoice_Line__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>