objects/Sales_Invoice__c/fields/Original_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Posting_Date__c</fullName>
    <label>Original Posting Date</label>
    <type>Date</type>
</CustomField>