objects/Sales_Invoice__c/fields/Overhead_Burden__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Burden__c</fullName>
    <formula>Invoice_Amount__c * Operating_Expense_Cost_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overhead Burden</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>