objects/Sales_Invoice__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Record</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Sales Invoices (Parent Record)</relationshipLabel>
    <relationshipName>Sales_Invoices3</relationshipName>
    <type>Lookup</type>
</CustomField>