objects/Sales_Invoice__c/fields/Payment_Age__c.field-meta.xml
<CustomField>
    <fullName>Payment_Age__c</fullName>
    <formula>Date_of_Last_Payment__c  -  Posting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>