objects/Sales_Invoice__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF(TEXT(Document_Status__c) == 'Void', '',
IF(ROUND(Amount_Paid__c,2) == ROUND(Invoice_Amt_Incl_Tax__c,2), 'Fully Paid', 
IF(Amount_Paid__c == 0, 'Unpaid', 'Partially Paid')))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>