objects/Sales_Invoice__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>