objects/Sales_Invoice__c/fields/Payment_Term_Match__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Match__c</fullName>
    <formula>IF( Payment_Term__c =  Bill_to_Customer__r.Payment_Term__c, "Same", "Different")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term Match</label>
    <type>Text</type>
</CustomField>