objects/Sales_Invoice__c/fields/PW__c.field-meta.xml
<CustomField>
    <fullName>PW__c</fullName>
    <formula>Sales_Order__r.Prevailing_Wage_Job__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PW</label>
    <type>Checkbox</type>
</CustomField>