objects/Sales_Invoice__c/fields/Quote_Invoice_Profit_Difference__c.field-meta.xml
<CustomField>
    <fullName>Quote_Invoice_Profit_Difference__c</fullName>
    <formula>Invoice_Profit_prct__c - Sales_Order__r.Approved_Quote_Profit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote/Billing Package Profit Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>