objects/Sales_Invoice__c/fields/Recall_EQAI_Billing_Package_clicked__c.field-meta.xml
<CustomField>
    <fullName>Recall_EQAI_Billing_Package_clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recall EQAI Billing Package clicked</label>
    <type>Checkbox</type>
</CustomField>