objects/Sales_Invoice__c/fields/Recall_Submitted_EQAI_BPR_clicked__c.field-meta.xml
<CustomField>
    <fullName>Recall_Submitted_EQAI_BPR_clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recall Submitted EQAI BPR clicked</label>
    <type>Checkbox</type>
</CustomField>