objects/Sales_Invoice__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>