objects/Sales_Invoice__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <formula>Service_Center__r.Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Region</label>
    <type>Text</type>
</CustomField>