objects/Sales_Invoice__c/fields/Remit_To__c.field-meta.xml
<CustomField>
    <fullName>Remit_To__c</fullName>
    <formula>Service_Center__r.Remittance_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remit To</label>
    <type>Text</type>
</CustomField>