objects/Sales_Invoice__c/fields/Rental_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Rental_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Invoice</label>
    <type>Checkbox</type>
</CustomField>