objects/Sales_Invoice__c/fields/Rental_Order__c.field-meta.xml
<CustomField>
    <fullName>Rental_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rental Order</label>
    <referenceTo>Rental_Order__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>