objects/Sales_Invoice__c/fields/Report_Runner_PM__c.field-meta.xml
<CustomField>
    <fullName>Report_Runner_PM__c</fullName>
    <formula>$User.Id = Sales_Order__r.Project_Coordinator__r.User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Runner PM</label>
    <type>Checkbox</type>
</CustomField>