objects/Sales_Invoice__c/fields/ReportRole__c.field-meta.xml
<CustomField>
    <fullName>ReportRole__c</fullName>
    <formula>$UserRole.Id  = "00Ef4000000cRfl"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReportRole</label>
    <type>Checkbox</type>
</CustomField>