objects/Sales_Invoice__c/fields/Retainage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retainage_Amount__c</fullName>
    <label>Retainage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>