objects/Sales_Invoice__c/fields/Retainage_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Retainage_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retainage Invoice</label>
    <type>Checkbox</type>
</CustomField>