objects/Sales_Invoice__c/fields/Retainage_Pct__c.field-meta.xml
<CustomField>
    <fullName>Retainage_Pct__c</fullName>
    <label>Retainage %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>