objects/Sales_Invoice__c/fields/Reversed_by_CM_No__c.field-meta.xml
<CustomField>
    <fullName>Reversed_by_CM_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reversed by CM No.</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Sales Invoices (Reversed by CM No.)</relationshipLabel>
    <relationshipName>Sales_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>