objects/Sales_Invoice__c/fields/Reversed_from_SI__c.field-meta.xml
<CustomField>
    <fullName>Reversed_from_SI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reversed from SI</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>